--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 //    androidTestImplementation 'com.android.support.test:runner:1.0.1'
 //    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    // RecyclerView 라이브러리
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    // CardView 라이브러리
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    // 디자인 라이브러리 - FloatingActionButton
+    implementation 'com.android.support:design:28.0.0'
+    // 이미지 로딩 라이브러리
+    api 'com.squareup.picasso:picasso:2.71828'
+    // 시간 관련 라이브러리
+    implementation 'net.danlew:android.joda:2.9.9.3'
 }
