--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
@@ -29,13 +28,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0' //구글 맵 관련 라이브러리
     implementation 'com.google.maps.android:android-maps-utils:0.5+' //구글 맵 클러스터 사용을 위한 라이브러리
     implementation 'com.android.support:cardview-v7:29.0.0' //맵 서치 바 카드를 만들기 위한 cardview 라이브러리★★★★★
-    implementation 'com.android.support:design:29.0.0' //현재위치 버튼에서 사용하는 FloatingActionButton 사용을 위한 라이브러리★★★★★
+    implementation 'com.android.support:design:29.0.0'
+    //현재위치 버튼에서 사용하는 FloatingActionButton 사용을 위한 라이브러리★★★★★
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-firestore:17.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -45,8 +46,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-database:19.2.0'//firebase DB 라이브러리 의존성 추가
     implementation 'com.google.firebase:firebase-storage:19.1.0' // firebase Storage 라이브러리 의존성 추가
-
-
 
 
 }
