--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.androidproject">
     <!-- 현재 위치를 위한 권한 요청 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -17,7 +18,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!-- 구글 클라우드 플랫폼에서 발급받은 API 키를 여기에 -->
         <meta-data android:name="com.google.android.geo.API_KEY"
@@ -38,23 +40,16 @@
         <activity android:name=".WriteActivity" />
         <activity android:name=".FingerPrintActivity" />
         <activity android:name=".ReportActivity">
-
-
-
         </activity>
         <activity android:name=".ReportListActivity" />
         <activity android:name=".InfoActivity" />
         <activity android:name=".MapActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".LoginActivity">
-
-
         </activity>
         <activity android:name=".LoadingActivity" />
         <activity android:name=".MainActivity" />
